# ghostcode

./: .gitignore  README.md  mypy.sh  pyproject.toml
etc/: todo.org
ghostcode/: __init__.py  ansi_colors.py  emacs.py  git.py  idle_worker.py  internal_testing.py  ipc.py  ipc_message.py  logconfig.py  main.py  nag_sources.py  program.py  progress_printer.py  prompts.py  shell.py  slash_commands.py  soundmanager.py  types.py  utility.py  worker.py
ghostcode/subcommand/: __init__.py  config.py  context.py  discover.py  init.py  interact.py  log.py  nag.py  verify.py
scripts/: ghostcode
tests/: setup.sh  test_code_data.py  test_functional.py  test_handle_code_part.py  test_interact.py  test_shell.py
tests/code_response_part_test_data/: javascript_create_new_file.yaml  markdown_full_replace_existing_file.yaml  python_large_file_partial_replace_good_match.yaml  python_partial_replace_ambiguous_match.yaml  python_partial_replace_bad_match.yaml  python_tiny_full_1.yaml
tests/example_code_files/: sorting.py
tests/scratch/: sorting.py
